<resources>
    <string name="app_name">Diploma</string>
    <string name="settings">Настройки</string>
    <string name="name">Анонимный читатель</string>
    <string name="authorization_button_text">Вход или регистрация</string>
    <string name="reading_goal">Цель по чтению</string>
    <string name="reading_goal_description">Установите цель и примите участие в испытании!</string>
    <string name="set_goal">Установить цель</string>
    <string name="statistics">Статистика</string>
    <string name="books">книг</string>
    <string name="read">прочитано</string>
    <string name="pages">стр</string>
    <string name="pages_per_hour">стр/час</string>
    <string name="reading_speed">скорость чтения</string>
    <string name="reading_time">время за чтением</string>
    <string name="h">ч</string>
    <string name="min">мин</string>
    <string name="my_books">Мои книги</string>
    <string name="there_will_be_your_books">Здесь будут ваши книги</string>
    <string name="choose_first_book">Выбрать первую книгу</string>
    <string name="available_offline">Доступны офлайн</string>
    <string name="want_to_read">Хочу прочитать</string>
    <string name="reading">Читаю</string>
    <string name="already_read">Прочитал</string>
    <string name="my_bookshelf">Мои полки</string>
    <string name="my_bookshelf_description">У вас нет ни одной полки, и самое время создать первую</string>
    <string name="create_bookshelf">Создать полку</string>
    <string name="my_reviews">Мои отзывы</string>
    <string name="reviewss">отзывов</string>
    <string name="profile">Профиль</string>
    <string name="search">Поиск</string>
    <string name="what_to_choose">Что выбрать</string>
    <string name="signin">Войти</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="create_username">Придумайте имя пользователя</string>
    <string name="enter_the_title_of_the_book_or_author">введите название книги или автора</string>
    <string name="genres">Жанры</string>
    <string name="author">Автор:</string>
    <string name="read_book">Читать</string>
    <string name="about_book">О книге</string>
    <string name="read_more">Читать далее</string>
    <string name="hide">Скрыть</string>
    <string name="reviews">Отзывы</string>
    <string name="mark">Оценка:</string>
    <string name="fantasy">Фэнтези</string>
    <string name="philosophical_literature">Философская литература</string>
    <string name="classic">Классика</string>
    <string name="fantastic">Фантастика</string>
    <string name="roman">Роман</string>
    <string name="user_profile">Учетная запись</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="printed_pages">печатных стр.</string>
    <string name="year">год</string>
    <string name="sign_out_alert">Вы действительно хотите выйти из аккаунта?</string>
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="account">Учетная запись</string>
    <string name="change_photo">Сменить фото</string>
    <string name="your_data">Ваши данные</string>
    <string name="username">Имя пользователя</string>
    <string name="save">Сохранить</string>
    <string name="email">Электронная почта</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="change">Изменить</string>
    <string name="invalid_email">Неверный email</string>
    <string name="invalid_email_or_password">Неверный email или пароль</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="email_already_exists">Пользователь с таким email уже существует</string>
    <string name="username_already_exists">Пользователь с таким именем уже существует</string>
    <string name="password_is_not_valid">Пароль должен иметь длину не менее 8 символов и содержать хотя бы одну букву</string>
    <string name="no_internet_connection">Нет подключения к интернету</string>
    <string name="username_successfully_updated">Имя пользователя успешно обновлено</string>
    <string name="review">Отзыв</string>
    <string name="publish">Опубликовать</string>
    <string name="review_hint">Напишите, что понравилось, а что нет</string>
    <string name="make_review">Написать отзыв</string>
    <string name="estimation">Оценка(от 1 до 5)</string>
    <string name="review_publish_error">При публикации отзыва произошла ошибка</string>
    <string name="no_reviews">Отзывов нет</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="already_reviewed">Вы уже написали отзыв на эту книгу</string>
    <string name="fill_field">Заполните поле</string>
    <plurals name="readers_singular">
        <item quantity="one">%d читатель оценил</item>
        <item quantity="few">%d читателя оценили</item>
        <item quantity="other">%d читателей оценили</item>
    </plurals>
    <plurals name="readers_plural">
        <item quantity="one">%d читатель оценил</item>
        <item quantity="few">%d читателя оценили</item>
        <item quantity="other">%d читателей оценили</item>
    </plurals>

</resources>