<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="18dp">

        <TextView
            android:id="@+id/readingGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/reading_goal"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/goalDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/readingGoal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/goalImage"
            android:text="@string/reading_goal_description"
            android:textColor="@color/text_color"/>

        <ImageView
            android:id="@+id/goalImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/target"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/goalSectionBarrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="readingGoal, goalDescription, goalImage"
            app:barrierDirection="bottom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/goalSectionBarrier"
            android:text="@string/set_goal"
            style="@style/YellowButtonStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>