<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/arrow"
            app:tint="@color/orange" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Меч предназначения"
            android:textSize="20sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/author"
            android:textColor="@color/text_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            tools:text="Анджей Сапковский"
            android:textColor="@color/yellow_button"
            android:textSize="16sp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:src="@drawable/cover"
                android:adjustViewBounds="true"/>

            <ImageView
                android:id="@+id/star"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/star"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/cover"
                />

            <TextView
                android:id="@+id/mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                app:layout_constraintTop_toTopOf="@id/star"
                app:layout_constraintStart_toEndOf="@id/star"
                app:layout_constraintBottom_toBottomOf="@id/star"
                tools:text="7,7"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/marksCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/star"
                android:text="0 читателей оценили"
                android:textColor="@color/light_grey"/>

            <TextView
                android:id="@+id/pagesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/marksCount"
                tools:text="136 печатных стр."
                android:textColor="@color/light_grey"/>

            <TextView
                android:id="@+id/ageLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/pagesCount"
                tools:text="16+"
                android:textColor="@color/light_grey"/>

            <TextView
                android:id="@+id/releaseYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@id/cover"
                app:layout_constraintTop_toBottomOf="@id/ageLimit"
                tools:text="1992 год"
                android:textColor="@color/light_grey"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/YellowButtonStyle"
            android:text="@string/read_book"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/about_book"
            android:textSize="18sp"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/readMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/read_more"
            android:textColor="@color/orange"/>

        <Button
            android:id="@+id/makeReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/YellowButtonStyle"
            android:text="@string/make_review"/>

        <TextView
            android:id="@+id/alreadyRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/already_reviewed"
            android:textColor="@color/yellow_button"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/reviews"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/orange"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewList"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"/>

        <TextView
            android:id="@+id/noReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_reviews"
            android:textColor="@color/text_color"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>