<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="6dp"
            android:background="@drawable/search_background">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_search"
                app:tint="@color/light_grey"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <EditText
                android:id="@+id/bookSearchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/enter_the_title_of_the_book_or_author"
                android:textColor="@color/light_grey"
                android:textSize="16dp"
                android:background="@null"
                android:layout_toEndOf="@id/searchIcon"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/genres"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genreList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"
            />

    </LinearLayout>

</ScrollView>