<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/card_background">

        <TextView
            android:id="@+id/readingTimeHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="0"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/readingTimeHours"
            app:layout_constraintBaseline_toBaselineOf="@id/readingTimeHours"
            android:text="@string/h"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:id="@+id/readingTimeMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintLeft_toRightOf="@id/h"
            app:layout_constraintTop_toTopOf="parent"
            android:text="0"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/readingTimeMinutes"
            app:layout_constraintBaseline_toBaselineOf="@id/readingTimeMinutes"
            android:text="@string/min"
            android:textSize="12sp"
            android:textColor="@color/text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/readingTimeHours"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/reading_time"
            android:textSize="12sp"
            android:textColor="@color/grey"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/watch"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>