<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/arrow"
        app:tint="@color/orange" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="12dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/user_profile"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/avatar"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@id/avatar"
                app:layout_constraintStart_toEndOf="@id/avatar"
                tools:text="mark@gmail.com"
                android:textSize="16sp"
                android:textColor="@color/orange"/>


            <FrameLayout
                android:id="@+id/signOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/rounded_orange_button"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_gravity="center"
                    android:textColor="@color/orange"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>